# ff-manager

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  trade-prospects.txt
data/: sleeper_assets.json
data/sleeper/: data.r  draft_table.csv  draft_table.numbers  draft_table.xlsx  draft_table_appended.csv  draft_values.csv  get_pick_values.R  get_raw_players.r  main.py  sleeper_assets.json  sleeper_picks.py
src/: _enum.py  asset.py  classes.py  data.py  exception.py  filter.py  functions.py  utils.py
src/ff_manager/: __init__.py  __main__.py  api.py  const.py  data.py  filter.py  functions.py  league.py  lineup.py  model.py  trade.py  utils.py
tests/: test_PostFilter.py  test_Trade.py  test_espn.py  test_filter.py  test_lineup.py
tests/data/: 2qb-extra.json  2qb.json  3team1.json  sleeper-super1.json
